@@ -94,6 +94,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|ArrayList
 import|;
 end_import
@@ -9134,6 +9144,35 @@ literal|"path"
 argument_list|)
 argument_list|)
 expr_stmt|;
+specifier|final
+name|SolrParams
+name|params
+init|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+decl_stmt|;
+specifier|final
+name|String
+name|lpList
+init|=
+name|params
+operator|.
+name|get
+argument_list|(
+name|CommonParams
+operator|.
+name|LOG_PARAMS_LIST
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|lpList
+operator|==
+literal|null
+condition|)
+block|{
 name|toLog
 operator|.
 name|add
@@ -9150,6 +9189,50 @@ operator|+
 literal|"}"
 argument_list|)
 expr_stmt|;
+block|}
+elseif|else
+if|if
+condition|(
+name|lpList
+operator|.
+name|length
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+name|toLog
+operator|.
+name|add
+argument_list|(
+literal|"params"
+argument_list|,
+literal|"{"
+operator|+
+name|params
+operator|.
+name|toFilteredSolrParams
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|lpList
+operator|.
+name|split
+argument_list|(
+literal|","
+argument_list|)
+argument_list|)
+argument_list|)
+operator|.
+name|toString
+argument_list|()
+operator|+
+literal|"}"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|/** Put status, QTime, and possibly request handler and params, in the response header */
 DECL|method|postDecorateResponse
