@@ -54,6 +54,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Map
 import|;
 end_import
@@ -1649,6 +1659,106 @@ operator|new
 name|MapSolrParams
 argument_list|(
 name|map
+argument_list|)
+return|;
+block|}
+comment|/** Create filtered SolrParams. */
+DECL|method|toFilteredSolrParams
+specifier|public
+name|SolrParams
+name|toFilteredSolrParams
+parameter_list|(
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|names
+parameter_list|)
+block|{
+name|NamedList
+argument_list|<
+name|String
+argument_list|>
+name|nl
+init|=
+operator|new
+name|NamedList
+argument_list|<
+name|String
+argument_list|>
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|Iterator
+argument_list|<
+name|String
+argument_list|>
+name|it
+init|=
+name|getParameterNamesIterator
+argument_list|()
+init|;
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|;
+control|)
+block|{
+specifier|final
+name|String
+name|name
+init|=
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|names
+operator|.
+name|contains
+argument_list|(
+name|name
+argument_list|)
+condition|)
+block|{
+specifier|final
+name|String
+index|[]
+name|values
+init|=
+name|getParams
+argument_list|(
+name|name
+argument_list|)
+decl_stmt|;
+for|for
+control|(
+name|String
+name|value
+range|:
+name|values
+control|)
+block|{
+name|nl
+operator|.
+name|add
+argument_list|(
+name|name
+argument_list|,
+name|value
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+block|}
+return|return
+name|toSolrParams
+argument_list|(
+name|nl
 argument_list|)
 return|;
 block|}
